# deepl-translator-cli

./: LICENSE  README.md  pyproject.toml
src/deepl_cli/: main.py
